feat: 폰트 파일 css에 불러오기

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,13 @@
     transform: rotate(360deg);
   }
 }
+
+@font-face {
+  font-family: 'CustomFont';
+  src: url('../public/fonts/SUITE-SemiBold.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'CustomFontBold';
+  src: url('../public/fonts/SUITE-ExtraBold.ttf') format('truetype');
+}
